navbar collapse fix

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3981,6 +3981,10 @@ button.btn.btn-primary.dropdown-toggle {
     padding-left: 2rem;
     padding-bottom: .3125rem;
     width: 100%;
+
+    .btn {
+      width: 100%;
+    }
   }
 
   .main-content {
